# marvin

./: .env.example  Cargo.toml  LICENSE  README.md
context/: feature_ideas.md  progress.md  project.md  schemars_usage.md  tavily_integration.md
context/rig_contributions/: README.md
context/rig_contributions/enhancements/potential/: dynamic_model_discovery.md  model_metadata.md  scotbot_features.md
context/rig_contributions/issues/pr_submitted/: anthropic_deprecated_models.md
src/: config.rs  main.rs  runner.rs  ui.rs
src/agent_tools/: add.rs  mod.rs
src/agent_tools/math/: add.rs  divide.rs  multiply.rs  subtract.rs
src/agent_tools/web/: mod.rs  tavily.rs
src/agent_tools/web/crawl/: request.rs  response.rs
src/agent_tools/web/extract/: mod.rs  request.rs  response.rs
src/agent_tools/web/map/: mod.rs  request.rs  response.rs
src/agent_tools/web/search/: mod.rs  request.rs  response.rs
src/anthropic/: get_models.rs  mod.rs
src/chat/: config.rs  input.rs  mod.rs  preamble.txt
src/command/: clear.rs  compact.rs  mod.rs  show_help_message.rs  summarize.rs  tokens.rs
src/commands/: clear.rs  exit.rs  help.rs  history.rs  mod.rs  model.rs  summarize.rs
src/user_commands/: clear_context.rs  compact_context.rs  exit_process.rs  import_chat_history.rs  mod.rs  save_chat_history.rs  show_chat_history.rs  show_context_summary.rs  show_help_message.rs  show_token_usage.rs  switch_model.rs
